add styling for pancake_maker

--- a/week4/pancake_maker/index.html
+++ b/week4/pancake_maker/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Pancake Maker</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
       <div class="image-container">
-        <img src="images/pancake.jpeg" alt="Delicious pancakes" />
+        <img src="images/pancakes.jpg" alt="Delicious pancakes" />
         <div class="price-banner"><span id="totalPrice">5€</span></div>
       </div>
 
