add 8_ball version with DOM elements and simple styling

--- a/week3/8_ball/index.html
+++ b/week3/8_ball/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="">
+        <input id ="user-input" type="text" placeholder="Ask me something">
+        <div class="buttons">
+            <button class="btn" id="submit-button" type="button">Ask!</button>
+            <button class="btn" type="submit">Click to ask again</button>
+        </div>
+    </form>
+    <div class="answer-box"><p id="answer"></p></div>
     <script src="main.js"></script>
 </body>
 </html>
