--- a/week4/pancake_maker/index.html
+++ b/week4/pancake_maker/index.html
@@ -46,7 +46,7 @@
           3€
         </label >
 
-        <h3>Total Price: <span id="totalPriceDisplay"></span></h3>
+        <h3>Total Price: <span id="totalPriceDisplay">5€</span></h3>
       </div>
     </div>
 
