add week6/little_zoo version 1

--- a/week6/little_zoo/index.html
+++ b/week6/little_zoo/index.html
@@ -30,6 +30,7 @@
       <!-- Add New Animal Form -->
       <div class="add-animal">
         <h2>Add New Animal</h2>
+        <p id="errorMessage"></p>
         <input type="text" id="newAnimalName" placeholder="Animal Name" />
         <select id="newAnimalType">
           <option value="" disabled selected>Select Type</option>
