--- a/week6/little_zoo/index.html
+++ b/week6/little_zoo/index.html
@@ -43,6 +43,7 @@
         <button id="addAnimal">Add Animal</button>
       </div>
     </div>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
+    <!-- <script src="main.js"></script> -->
   </body>
 </html>
