add pancake_maker version 2

--- a/week7/pancake_maker_3/orders.html
+++ b/week7/pancake_maker_3/orders.html
@@ -9,8 +9,10 @@
 <body>
     <div class="orderContainer">
         <h1>Orders</h1>
-        <input type="text" id="searchOrder" placeholder="Search order by id">
-        <button id="sortOrders">Sort by status</button>
+        <div class="ordersToolbar">
+            <input type="text" id="searchOrder" placeholder="Search order by id">
+            <button id="sortOrders">Sort by status</button>
+        </div>
         <ul id="orderList"></ul>
         <script src="manageOrders.js"></script>
     </div>
