add pancake_maker_3 version 3

--- a/week7/pancake_maker_3/orders.html
+++ b/week7/pancake_maker_3/orders.html
@@ -14,7 +14,7 @@
             <button id="sortOrders">Sort by status</button>
         </div>
         <ul id="orderList"></ul>
-        <script src="manageOrders.js"></script>
+        <script type="module" src="manageOrders.js"></script>
     </div>
 </body>
 </html>
