--- a/week8/index.html
+++ b/week8/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Error handling practice</h1>
-    <script src="error_handling.js"></script>
+    <script src="fault_finding.js"></script>
 </body>
 </html>
